refacto: making the mapper more flexible with abstraction